samples/_failures_safe/1761006523_00abfa_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d8cada18.c: In function ‘main’:
./samples/SAFE/__tmp_d8cada18.c:150: error: expected ‘(’ at end of input
./samples/SAFE/__tmp_d8cada18.c:149:5: error: expected declaration or statement at end of input
  149 |     if
      |     ^~
